fixed responsive nav not showing all nav items

--- a/static/styles/navbarStyleSheet.css
+++ b/static/styles/navbarStyleSheet.css
@@ -54,8 +54,10 @@ a.nav-item:hover:not(.active) {
     }
     .nav-item {
         width: 100%;
-        padding: 2em 0;
-        text-align: center;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
     .spacer {
         display: none;
@@ -75,6 +77,7 @@ a.nav-item:hover:not(.active) {
         align-items: center;
         z-index: 2;
         transition: 1s;
+        height: calc(100% - 64px);
     }
     .dropdown {
         left: 0;
